--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
-node_modules/
+*.csv
+*.dat
+*.iml
+*.log
+*.out
+*.pid
+*.seed
+*.sublime-*
+*.swo
+*.swp
+*.tgz
+*.xml
+.DS_Store
+.project
+.strong-pm
 .idea
+coverage
+node_modules
+npm-debug.log
