--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "~4.16.0",
     "morgan": "~1.9.0",
     "web3": "^1.0.0-beta.36"
+  },
+  "devDependencies": {
+    "dotenv": "^6.0.0"
   }
 }
